# JianyingDraft.PY

./: .editorconfig  .gitignore  .pylintrc  LICENSE  README.md  _projectConfig.ini  _projectHelper.py  draftContext.py  main.py  project.py  pyproject.toml
.draftDemo/: draft_meta_info.json
.draftDemo/2/: draft_content.json  draft_meta_info.json
.draftDemo/Normal/: draft_content.json
.draftDemo/Temp/T1(两个图片做视频)/: draft_content.json  draft_meta_info.json
.github/workflows/: pylint.yml
.res/: 1-20240613174219.srt  日报摘抄1.mov  日报摘抄2.mov
.test/: test_materialFactory.py  test_medialFactory.py
.test/_res/: my-video.mov
JianYingDraft/core/: draft.py  material.py  materialAudio.py  materialFactory.py  materialMate.py  materialMisc.py  materialPhoto.py  materialVideo.py  materials.py  media.py  mediaAudio.py  mediaEffect.py  mediaFactory.py  mediaImage.py  mediaPhoto.py  mediaSubtitle.py  mediaText.py  mediaVideo.py  template.py  track.py  tracks.py
JianYingDraft/template/: draft_content.json  draft_meta_info.json
JianYingDraft/utils/: __init__.py  dataStruct.py  innerBizTypes.py  jsonCustionEncoder.py  tools.py
JianyingDraft/core/: draft.py  materialAudio.py  materialMisc.py  materialVideo.py  materials.py  template.py  tracks.py
JianyingDraft/utils/: tools.py
core/: __init__.py  draft.py  material.py  template.py  track.py  tracks.py  util.py
core/template/: draft_content.json
misc/: .README.md  jianyingMate.py
misc/template/: draft_content.json  draft_meta_info.json
misc/utils/: tool.py  util.py
template/: draft_meta_info.json
(+103 files in other folders)
